# MediArch

./: .gitattributes  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml
src/mediarch/: __init__.py  forms.py  models.py  routes.py
src/mediarch/static/css/: main.css
src/mediarch/static/js/: main.js
src/mediarch/templates/: _form_helpers.html  admin_dashboard.html  admin_user_form.html  admin_users_list.html  base.html  index.html  login.html  patient_detail.html  patient_form.html  patient_list.html  register.html
tests/: test_routes.py
